//protoc --go_out=plugins=grpc:.
syntax = "proto3";
package pb_user_v1;
import "user-msg.proto";
import "role-msg.proto";
import "group-msg.proto";
service RpcOrgService {
  rpc RpcAddUser(UserProto) returns (UserProto);
  rpc RpcGetUserById(UserProto) returns (UserProto);
  rpc RPCGroupAdd(GroupAddRequest) returns (GroupResponse);
  rpc RPCGroupQueryWithQuotaByCondition(GroupQueryWithQuotaByConditionRequest) returns (GroupQueryWithQuotaByConditionResponse);
  rpc RpcAddRole(CreateMenuPermRequestProto) returns (RoleProto);
}
